kubernetes/api-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
      - name: user-service
        image: ghcr.io/fontys-stress-wearables/user-service:main

---

apiVersion: v1
kind: Service
metadata:
  name: user-service-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: user-service
  ports:
    - name: user-service
      protocol: TCP
      port: 80
      targetPort: 80
