kubernetes/api-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service-np-service
spec:
  type: NodePort
  selector:
    app: user-service
  ports:
    - name: user-service
      protocol: TCP
      port: 80
      targetPort: 80
