kubernetes/db.yaml
# service
#
# set up a service for the organization database.
# set the target port and port to the standard postgres port

apiVersion: v1
kind: Service
metadata:
 name: userservice-database
spec:
 selector:
  app: userservice-database
 ports:
  - port: 5432 
    targetPort: 5432

---
# deployment
#
# set up a single pod with the postgres image.
# The credentials are passed through the environment variables.

apiVersion: apps/v1
kind: Deployment
metadata:
 name: userservice-database
spec:
 selector:
  matchLabels:
   app: userservice-database
 replicas: 1
 template:
  metadata:
   labels:
    app: userservice-database
  spec:
   containers:
    - name: userservice-database
      image: postgres:14.2
