kubernetes/ingress-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: nginx
  name: nginx-depl
spec:
  replicas: 1
  selector: 
    matchLabels:
      run: nginx
  template:
    metadata:
      labels:
        run: nginx
    spec: 
      containers:
        - name: nginx
          image: nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    http:
      paths: 
        - path: /api/patientgroups
          pathType: Prefix
          backend:
            service:
              name: user-service-clusterip-service
              port:
                number: 80
